add mock server with auth

--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "json-server": "^0.16.2",
+    "json-server-auth": "^2.0.2",
     "prettier": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-mock-server": "json-server-auth db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
