--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "jwt-decode": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
     "react-query": "^2.23.0",
     "react-query-devtools": "^2.5.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "string-to-color": "^2.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
