--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
+    "i18next": "^19.8.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "jwt-decode": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
+    "react-i18next": "^11.7.3",
     "react-query": "^2.23.0",
     "react-query-devtools": "^2.5.1",
     "react-router-dom": "^5.2.0",
