--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-diff-viewer": "^3.1.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
     "react-i18next": "^11.7.3",
